@@ -1,4 +1,4 @@
-FROM amazoncorretto:20-alpine-jdk as jreBuilder
+FROM amazoncorretto:21-alpine-jdk as jreBuilder
 
 RUN apk add binutils
 RUN jlink \
@@ -6,7 +6,6 @@ RUN jlink \
     java.base,java.desktop,java.instrument,java.logging,java.management,java.naming,java.net.http,java.sql,java.xml,jdk.crypto.ec,jdk.naming.dns,jdk.unsupported,jdk.incubator.concurrent\
     --verbose \
     --strip-debug \
-    --compress 2 \
     --no-header-files \
     --no-man-pages \
     --output /jre
@@ -15,5 +14,5 @@ FROM alpine
 
 COPY --from=jreBuilder /jre /usr/lib/jre
 COPY ./target/manga-backend-*jar manga-backend.jar
-ENTRYPOINT ["/usr/lib/jre/bin/java","--enable-preview", "--add-modules=jdk.incubator.concurrent", "-XX:MaxRAMPercentage=80.0","-jar", "./manga-backend.jar"]
+ENTRYPOINT ["/usr/lib/jre/bin/java","--enable-preview", "-XX:MaxRAMPercentage=80.0","-jar", "./manga-backend.jar"]
 
